[JENKINS-54907] - Prototype the Java 11 image